feat(apprise): increase worker count

--- a/charts/apprise/templates/deployment.yaml
+++ b/charts/apprise/templates/deployment.yaml
@@ -8,7 +8,7 @@ spec:
             - name: APPRISE_DEFAULT_THEME
               value: "dark"
             - name: APPRISE_WORKER_COUNT
-              value: "1"
+              value: {{ .Values.workerCount | default "2" | quote }}
             - name: APPRISE_STATEFUL_MODE
               value: "simple"
           ports:
