feat(apprise): update nginx config

--- a/charts/apprise/templates/deployment.yaml
+++ b/charts/apprise/templates/deployment.yaml
@@ -26,6 +26,9 @@ spec:
               port: http
             initialDelaySeconds: 10
           volumeMounts:
+            - name: nginx-conf
+              mountPath: /opt/apprise/webapp/etc/nginx.conf
+              subPath: nginx.conf
             - name: data
               mountPath: /config
             - name: data
@@ -39,6 +42,9 @@ spec:
             {{- end }}
           {{- include "common.container" . | nindent 10 }}
       volumes:
+        - name: nginx-conf
+          configMap:
+            name: {{ include "common.fullname" . }}
         - name: data
           {{- if .Values.persistence.enabled }}
           persistentVolumeClaim:
