feat: improve health probes

--- a/charts/apprise/templates/deployment.yaml
+++ b/charts/apprise/templates/deployment.yaml
@@ -19,10 +19,12 @@ spec:
             httpGet:
               path: /status
               port: http
+            initialDelaySeconds: 10
           readinessProbe:
             httpGet:
               path: /status
               port: http
+            initialDelaySeconds: 10
           volumeMounts:
             - name: data
               mountPath: /config
