--- a/charts/audiobookshelf/templates/deployment.yaml
+++ b/charts/audiobookshelf/templates/deployment.yaml
@@ -17,10 +17,12 @@ spec:
             httpGet:
               path: /healthcheck
               port: http
+            initialDelaySeconds: 10
           readinessProbe:
             httpGet:
               path: /healthcheck
               port: http
+            initialDelaySeconds: 10
           volumeMounts:
             - name: data
               mountPath: /config
