--- a/charts/filebrowser/templates/deployment.yaml
+++ b/charts/filebrowser/templates/deployment.yaml
@@ -14,10 +14,12 @@ spec:
             httpGet:
               path: /health
               port: http
+            initialDelaySeconds: 2
           readinessProbe:
             httpGet:
               path: /health
               port: http
+            initialDelaySeconds: 2
           volumeMounts:
             - name: config
               mountPath: /config
