--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -20,14 +20,16 @@ spec:
             httpGet:
               path: /healthz
               port: http
-            initialDelaySeconds: 20
-            periodSeconds: 10
-            failureThreshold: 4
           livenessProbe:
             httpGet:
               path: /healthz
               port: http
-            initialDelaySeconds: 60
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: http
+            initialDelaySeconds: 20
+            failureThreshold: 15
           volumeMounts:
             - name: data
               mountPath: /.n8n
