fix(monitoring): use extra metric for apprise alert

--- a/charts/monitoring/alerts/apps.yaml
+++ b/charts/monitoring/alerts/apps.yaml
@@ -131,7 +131,7 @@ groups:
               to: 0
             datasourceUid: prometheus
             model:
-              expr: increase(http_requests_total{container="apprise", handler=~"/notify.*", status=~"[45]xx"}[5m])
+              expr: increase(apprise_notify_errors_total[5m])
               range: true
               refId: A
           - refId: reducer
