--- a/charts/cnpg-cluster/templates/cluster.yaml
+++ b/charts/cnpg-cluster/templates/cluster.yaml
@@ -6,6 +6,7 @@ spec:
   instances: 1
   imageName: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
   {{- if .Values.superuserSecret.name }}
+  enableSuperuserAccess: true
   superuserSecret:
     name: {{ .Values.superuserSecret.name }}
   {{- end }}
