--- a/charts/cnpg-cluster/templates/database.yaml
+++ b/charts/cnpg-cluster/templates/database.yaml
@@ -1,9 +1,10 @@
 {{- $fullName := include "common.fullname" . -}}
 {{- range .Values.databases }}
+---
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: {{ .database }}
+  name: {{ .database | replace "_" "-" }}
 spec:
   name: {{ .database }}
   owner: {{ .owner }}
