fix(home-assistant): use correct DNS policy

--- a/charts/home-assistant/templates/deployment.yaml
+++ b/charts/home-assistant/templates/deployment.yaml
@@ -58,6 +58,7 @@ spec:
             - name: config
               mountPath: /config
       hostNetwork: true
+      dnsPolicy: "ClusterFirstWithHostNet"
       volumes:
         - name: config
           {{- if .Values.persistence.enabled }}
