--- a/ci/ct-lint-config.yaml
+++ b/ci/ct-lint-config.yaml
@@ -1,5 +1,6 @@
 debug: true
 all: true
 chart-repos:
+  - argo=https://argoproj.github.io/argo-helm
   - cnpg=https://cloudnative-pg.github.io/charts/
 validate-maintainers: false
