--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -5,7 +5,10 @@ version: 0.1.18
 dependencies:
   - name: kube-prometheus-stack
     version: "79.11.0"
-    repository: "https://prometheus-community.github.io/helm-charts"
+    repository: oci://ghcr.io/prometheus-community/charts
+  - name: prometheus-smartctl-exporter
+    version: "0.16.0"
+    repository: oci://ghcr.io/prometheus-community/charts
   - name: file-exporter
     version: "0.1.0"
     condition: file-exporter.enabled
