feat(home-assistant): add startup probe

--- a/charts/home-assistant/templates/deployment.yaml
+++ b/charts/home-assistant/templates/deployment.yaml
@@ -17,12 +17,16 @@ spec:
             httpGet:
               path: /manifest.json
               port: http
-            initialDelaySeconds: 5
           readinessProbe:
             httpGet:
               path: /manifest.json
               port: http
-            initialDelaySeconds: 5
+          startupProbe:
+            httpGet:
+              path: /manifest.json
+              port: http
+            initialDelaySeconds: 20
+            failureThreshold: 15
           volumeMounts:
             - name: config
               mountPath: /config
